<resources>
    <string name="app_name">Inventory App</string>
    <string name="empty_list">You can add products by clicking \"+\" button</string>
    <string name="photo">photo</string>
    <string name="product">product</string>
    <string name="order">Order</string>
    <string name="delete">Delete</string>
    <string name="price">Price</string>
    <string name="quantity">Quantity</string>
    <string name="name">Name</string>
    <string name="add_photo">Add photo</string>
    <string name="photo_edit_symbol">edit symbol</string>
    <string name="name_symbol">name symbol</string>
    <string name="quantity_symbol">quantity symbol</string>
    <string name="price_symbol">price symbol</string>
    <string name="details_title">Details</string>
    <string name="products_catalog_title">Products catalog</string>
    <string name="edit_product_title">Edit product</string>
    <string name="dismiss">dismiss</string>
    <string name="add">Add</string>
    <string name="save">save</string>
    <string name="cancel">Cancel</string>
    <string name="change_photo">Change photo</string>
    <string name="error_loading_product">Error with loading product</string>
    <string name="failed_getting_image">Getting image failed</string>
    <string name="failed_deleting_product">Deleting product failed</string>
    <string name="failed_saving_product">Saving product failed</string>
    <string name="failed_adding_product">Adding a new product failed</string>
    <string name="info_not_picked_image">Image not picked</string>
    <string name="info_deleted_product">Product deleted</string>
    <string name="info_correct_name_enter">Enter correct name</string>
    <string name="info_saved_product">Product saved</string>
    <string name="info_added_product">Product added</string>
    <string name="email_order">Order -</string>
    <string name="email_dear">Dear Sir/Madam,</string>
    <string name="email_would_like">I would like to order</string>
    <string name="email_number_of">Number of items:</string>
    <string name="email_yours">Yours faithfully,</string>
    <string name="select_app_title">Select an app to send message</string>
    <string name="order_dialog_title">How many do you want to order?</string>
    <string name="order_dialog_cancel">Cancel</string>
    <string name="order_dialog_make_order">Make order</string>
    <string name="dollar_symbol" translatable="false">$</string>
    <string name="number_no_data">no data</string>
    <string name="sort_by_name_asc">Sort by name A-Z</string>
    <string name="sort_by_name_desc">Sort by name Z-A</string>
    <string name="sort_by_price_highest">Sort by price highest</string>
    <string name="sort_by_price_lowest">Sort by price lowest</string>
    <string name="sort_by_date_newest">Sort by date newest</string>
    <string name="sort_by_date_oldest">Sort by date oldest</string>
    <string name="sort_by_quantity_more">Sort by quantity more</string>
    <string name="sort_by_quantity_less">Sort by quantity less</string>
    <string name="statistics">Statistics</string>
    <string name="about_the_app">About the app</string>
    <string name="content_description_big_app_icon">big app icon</string>
    <string name="created_by">Created by:</string>
    <string name="mikolaj_ratajczyk" translatable="false">Mikołaj Ratajczyk</string>
    <string name="mikolaj_ratajczyk_at_gmail" translatable="false">mikolaj.ratajczyk(AT)gmail.com</string>
    <string name="number_of_items">Number of items</string>
    <string name="number_of_products">Number of products</string>
    <string name="maximum_price">Maximum price</string>
    <string name="minimum_price">Minimum price</string>
    <string name="statistics_title">Statistics</string>
    <string name="graphs_title">Graphs</string>
    <string name="about_title">About</string>
    <string name="items_products_graph_title">Items and products number</string>
    <string name="max_min_price_graph_title">Maximum and minimum price</string>
    <string name="content_description_background_product_photo">background product photo</string>
    <string name="list_no_product_available">No product available</string>
    <string name="settings_label">Settings</string>
    <string name="preference_longer_easter_egg" translatable="false">preference_longer_easter_egg</string>
    <string name="multiply_values_by_ten">Multiply values by 10</string>
    <string name="longer_easter_egg">Longer easter egg</string>
    <string name="title_easter_egg" translatable="false">Easter egg</string>
    <string name="preference_category_easter_egg" translatable="false">preference_category_easter_egg</string>
    <string name="bottom_nav_title_catalog">Catalog</string>
    <string name="bottom_nav_title_statistics">Statistics</string>
    <string name="bottom_nav_title_settings">Settings</string>
    <string name="bottom_nav_title_about">About</string>
    <string name="dialog_title_permission_denied">Permission denied</string>
    <string name="dialog_description_app_will_not_work">App will not work without storage permission</string>
    <string name="exit">Exit</string>
    <string name="bottom_nav_title_export">Export</string>
    <string name="card_title_export_settings">Export settings</string>
    <string name="card_title_export_actions">Export actions</string>
    <string name="save_to_pdf">Save to PDF</string>
    <string name="include_photos">Include photos</string>
    <string name="include_zero_quantity_products">Include zero-quantity products</string>
    <string name="snackbar_database_export_success">Database exported successfully</string>
    <string name="date_symbol">date symbol</string>
    <string name="date">Date</string>
    <string name="day_month_year_schema_hint">DD.MM.YYYY</string>
    <string name="time_schema_hint">HH:mm</string>
</resources>
