<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/catalog_button"
        android:enabled="true"
        android:icon="@drawable/list_icon"
        android:title="@string/bottom_nav_title_catalog"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/statistics_button"
        android:enabled="true"
        android:icon="@drawable/statistics_icon_dark_orange"
        android:title="@string/bottom_nav_title_statistics"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/about_button"
        android:enabled="true"
        android:icon="@drawable/ic_info"
        android:title="@string/bottom_nav_title_about"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/export_button"
        android:enabled="true"
        android:icon="@drawable/export_icon"
        android:title="@string/bottom_nav_title_export"
        app:showAsAction="ifRoom" />
</menu>