<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProductDetailActivity">

    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/product_detail_card"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_margin="16dp"
        android:background="#fff"
        android:elevation="8dp"
        card_view:cardCornerRadius="4dp">


        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <android.support.design.widget.FloatingActionButton
                android:id="@+id/product_detail_edit_fab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="16dp"
                android:clickable="true"
                android:focusable="true"
                app:srcCompat="@drawable/edit_mode_icon"
                card_view:layout_constraintEnd_toEndOf="parent"
                card_view:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/product_detail_order_button"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/order"
                android:textColor="@color/green"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />


            <Button
                android:id="@+id/product_detail_dismiss_button"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginEnd="8dp"
                android:text="@string/dismiss"
                android:textColor="@color/amber"
                card_view:layout_constraintBottom_toBottomOf="parent"
                card_view:layout_constraintEnd_toStartOf="@+id/product_detail_order_button" />

            <TextView
                android:id="@+id/product_detail_quantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:textSize="36sp"
                card_view:layout_constraintBottom_toBottomOf="@+id/product_detail_quantity_icon"
                card_view:layout_constraintStart_toEndOf="@+id/product_detail_quantity_icon"
                card_view:layout_constraintTop_toTopOf="@+id/product_detail_quantity_icon"
                tools:text="28" />

            <ImageView
                android:id="@+id/product_detail_quantity_icon"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:contentDescription="@string/quantity_symbol"
                app:srcCompat="@drawable/product_quantity_icon_black"
                card_view:layout_constraintBottom_toTopOf="@+id/product_detail_price_icon"
                card_view:layout_constraintStart_toStartOf="@+id/product_detail_name_icon"
                card_view:layout_constraintTop_toBottomOf="@+id/product_detail_name_icon" />

            <TextView
                android:id="@+id/product_detail_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:textSize="36sp"
                card_view:layout_constraintBottom_toBottomOf="@+id/product_detail_price_icon"
                card_view:layout_constraintStart_toEndOf="@+id/product_detail_price_icon"
                card_view:layout_constraintTop_toTopOf="@+id/product_detail_price_icon"
                tools:text="$3" />

            <ImageView
                android:id="@+id/product_detail_price_icon"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginBottom="8dp"
                android:contentDescription="@string/price_symbol"
                app:srcCompat="@drawable/product_price_icon_black"
                card_view:layout_constraintBottom_toTopOf="@+id/product_detail_order_button"
                card_view:layout_constraintStart_toStartOf="@+id/product_detail_quantity_icon"
                card_view:layout_constraintTop_toBottomOf="@+id/product_detail_quantity_icon" />

            <ImageView
                android:id="@+id/product_detail_photo"
                android:layout_width="0dp"
                android:layout_height="250dp"
                android:contentDescription="@string/product"
                android:scaleType="centerCrop"
                card_view:layout_constraintEnd_toEndOf="parent"
                card_view:layout_constraintStart_toStartOf="parent"
                card_view:layout_constraintTop_toTopOf="parent"
                tools:src="@tools:sample/backgrounds/scenic" />

            <TextView
                android:id="@+id/product_detail_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:textSize="36sp"
                card_view:layout_constraintBottom_toBottomOf="@+id/product_detail_name_icon"
                card_view:layout_constraintStart_toEndOf="@+id/product_detail_name_icon"
                card_view:layout_constraintTop_toTopOf="@+id/product_detail_name_icon"
                tools:text="Name" />

            <ImageView
                android:id="@+id/product_detail_name_icon"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginStart="16dp"
                android:contentDescription="@string/name_symbol"
                app:srcCompat="@drawable/product_name_icon_black"
                card_view:layout_constraintBottom_toTopOf="@+id/product_detail_quantity_icon"
                card_view:layout_constraintStart_toStartOf="parent"
                card_view:layout_constraintTop_toBottomOf="@+id/product_detail_photo" />


        </android.support.constraint.ConstraintLayout>
    </android.support.v7.widget.CardView>

</LinearLayout>